--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-stickynode": "^4.0.0",
+    "react-router-dom": "^5.2.1",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
@@ -44,6 +45,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.2.1"
   }
 }
