--- a/package.json
+++ b/package.json
@@ -12,5 +12,25 @@
     "https://git.heroku.com/comp531-rw48-mymedia.git"
   ],
   "author": "Ruijin Wang",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.27.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "es6-promise": "^4.2.8",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "googleapis": "^92.0.0",
+    "is_email": "^0.0.2",
+    "isomorphic-fetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
+    "mongoose": "^6.0.13",
+    "multer": "^1.4.3",
+    "passport": "^0.5.0",
+    "passport-google-oauth": "^2.0.0",
+    "path": "^0.12.7",
+    "redis": "^3.1.2"
+  }
 }
