--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-stickynode": "^4.0.0",
-    "react-router-dom": "^5.2.1",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.2.1"
   }
 }
