--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-stickynode": "^4.0.0",
+    "gts": "^3.1.0",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
