--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ruijin Wang",
   "license": "MIT",
   "dependencies": {
+    "gts": "^3.1.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.27.1",
     "cookie-parser": "^1.4.5",
